Changelog 0.4.33 [20231008]:
- Changed 9anime to Aniwave
- Fixed Playlist Errors

Changelog 0.4.32 [20231007]:
- Added local anime_id mapping database

Changelog 0.4.31 [20231006]:
- Fixed Anify 9anime Embed

Changelog 0.4.30 [20231005]:
- Fixed Artwork Bug with Episode Thumbnails
- Fixed Anilist Watchlist with Current Stuff

Changelog 0.4.29 [20231001]:
- Added New Setting "Hide Unaired Episodes"
- Made Rare Bugs for Watchlist Smaller

Changelog 0.4.28 [20230929]:
- Reverted art poster typo error

Changelog 0.4.27 [20230929]:
- Changed the cache threshold from 24 to 4 

Changelog 0.4.26 [20230929]:
- Changes Simkl api key to a temporary key
- Changed the cache threshold from 2 to 24 

Changelog 0.4.25 [20230929]:
- Fix art poster typo error
- Fix Rare Bugs for Watchlist
- Made "simkl.unaired" a subsetting

Changelog 0.4.24 [20230928]:
- Fixed Episode Meta Bug
- Fixed Menu Submenu Customization Bugs
- Fixed Genre Widget Menu Bug
- Fixed All Context Menus for Watchlist
- Fixed Amount of Items in Watchlist
- Fixed Watch Indicators in Watchlist
- Fixed Anilist Watchlist
- Fixed Mal Watchlist
- Fixed Kitsu Watchlist
- Added Simkl Watchlist
- Added New Setting "Set Percentage to Mark as Watched"
- Added New Setting "Show Mark as Watched Watchlist Context Menu"
- Added "Marked as Watched Watchlist"
- Added Watchlist Manager Context Menu
- Added "Add to Current" For Watchlist Manager
- Added "Add to Planning" For Watchlist Manager
- Added "Add to Completed" For Watchlist Manager
- Added "Add to Rewatching" For Watchlist Manager
- Added "Add to Paused" For Watchlist Manager
- Added "Add to Dropped" For Watchlist Manager
- Added "Set Score" For Watchlist Manager
- Added "Delete" For Watchlist Manager
- Added Support for Subtitle Addons
- Added Main Genres 
- Added Genre Menu Customization

Changelog 0.4.23 [20230908]:
- Fix Setting Defaults
- Fix Subtitle Default

Changelog 0.4.22 [20230904]:
- Add additional embed hosters as used by gogo